Use the url method so that the kickstart can find all the packages defined

--- a/packer/http/centos-7-ks.cfg
+++ b/packer/http/centos-7-ks.cfg
@@ -1,6 +1,8 @@
 # https://raw.githubusercontent.com/geerlingguy/packer-centos-7/master/http/ks.cfg
 install
-cdrom
+#cdrom
+url --url="http://ftp.linux.ncsu.edu/mirror/mirror.centos.org/7/os/x86_64/"
+
 lang en_US.UTF-8
 keyboard us
 unsupported_hardware
@@ -42,6 +44,7 @@ rsync
 strace
 bind-utils
 git
+epel-release
 
 # unnecessary firmware
 -aic94xx-firmware
