--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -4,5 +4,6 @@
 Vagrant.configure(2) do |config|
 
   config.vm.box = "odpi-test-0"
+  config.vm.network "forwarded_port", guest: 8080, host: 8081
 
 end
