Switch to the larger 'everything' ISO to improve install times

--- a/packer/http/centos-7-ks.cfg
+++ b/packer/http/centos-7-ks.cfg
@@ -1,7 +1,7 @@
 # https://raw.githubusercontent.com/geerlingguy/packer-centos-7/master/http/ks.cfg
 install
-#cdrom
-url --url="http://ftp.linux.ncsu.edu/mirror/mirror.centos.org/7/os/x86_64/"
+cdrom
+#url --url="http://ftp.linux.ncsu.edu/mirror/mirror.centos.org/7/os/x86_64/"
 
 lang en_US.UTF-8
 keyboard us
