--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -6,4 +6,8 @@ Vagrant.configure(2) do |config|
   config.vm.box = "odpi-test-0"
   config.vm.network "forwarded_port", guest: 8080, host: 8081
 
+  config.vm.provider "virtualbox" do |v|
+  	v.memory = 4096
+    v.cpus = 2
+  end
 end
