--- a/packer/http/centos-7-ks.cfg
+++ b/packer/http/centos-7-ks.cfg
@@ -76,7 +76,8 @@ epel-release
 %end
 
 %post
-yum update -y
+#yum update -y
+yum update -y yum kernel* gcc* glibc*
 
 # update root certs
 wget -O/etc/pki/tls/certs/ca-bundle.crt http://curl.haxx.se/ca/cacert.pem
