--- a/vagrant/ansible/testfacts.yml
+++ b/vagrant/ansible/testfacts.yml
@@ -1,10 +1,18 @@
 - name: setup the sandbox
   hosts: sandbox
-  gather_facts: True
+  #gather_facts: True
+  gather_facts: False
   sudo: True
   sudo_user: root
+  vars:
+    packer: False
   tasks:
 
 
     - debug: var=hostvars
     - debug: var=hostvars[inventory_hostname]['ansible_default_ipv4']['address']
+
+    - shell: echo "packer is True"
+      when: "{{ packer|bool }}"
+    - shell: echo "packer is False"
+      when: "{{ not packer|bool }}"
