--- a/packer/http/centos-7-ks.cfg
+++ b/packer/http/centos-7-ks.cfg
@@ -6,7 +6,7 @@ cdrom
 lang en_US.UTF-8
 keyboard us
 unsupported_hardware
-network --bootproto=dhcp
+network --bootproto=dhcp --hostname=sandbox.odp.org
 rootpw  hadoop
 firewall --disabled
 selinux --permissive
@@ -88,4 +88,6 @@ echo "vagrant        ALL=(ALL)       NOPASSWD: ALL" >> /etc/sudoers.d/vagrant
 sed -i "s/^.*requiretty/#Defaults requiretty/" /etc/sudoers
 
 yum clean all
+
+hostnamectl set-hostname sandbox.odp.org
 %end
