Remove all yum repo caching and simplify the framework

--- a/packer/http/centos-7-ks.cfg
+++ b/packer/http/centos-7-ks.cfg
@@ -29,6 +29,7 @@ user --name=vagrant --plaintext --password vagrant --groups=vagrant,wheel
 @Base
 @Core
 @Development Tools
+deltarpm
 openssh-clients
 sudo
 openssl-devel
@@ -76,6 +77,8 @@ epel-release
 %end
 
 %post
+
+# Just update a few packages necessary for vbox drivers
 #yum update -y
 yum update -y yum kernel* gcc* glibc*
 
